# match-madness-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  constance.py  main.py  ocr.py  pyproject.toml  rus-deu.json  tesaurus.py
data/: rus-deu.json
helpers/: constants.py  match_madness.py  ocr.py  screenshot.py  tesaurus.py  utils.py
screen/: __init__.py  _base.py  attention.py  double_points.py  extreme.py  finish.py  game.py  intermediate.py  rate_us.py  start.py  timeout.py  wait_where_are_you.py
screens/: attention.py  finish.py  game.py  start.py
src/: main.py
src/helpers/: tesaurus.py
src/screen/: attention.py  finish.py  game.py  intermediate.py  start.py
tests/: test_match_madness.py  test_ocr.py  test_screen.py  test_screenshot.py  test_tesseract.py
tests/screen/: test_attention.py  test_extreme.py  test_finish.py  test_intermediate.py  test_start.py
